--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: python
 python:
   - "2.7"
+  - "2.6"
 # command to install dependencies
 install:
   - "pip install ."
-  - "pip install -r requirements.txt"
+  - "pip install -r requirements-dev.txt"
 # command to run tests
 script: paver test_all
